# deltachat-rpg-bot

./: Cargo.toml
src/: main.rs
