[package]
name = "deltachat-rpg-bot"
version = "0.1.0"
authors = ["Angelo Fuchs <af@steamnet.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", branch = "master" }
tempfile = "3"
